<?xml version="1.0"?>
<package>
  <name>rgbd_graph_segmentation</name>
  <version>1.0.0</version>
  <description>
Extension of Felzenszwalb's graph-based segmentation algorithm to use depth information.
  </description>
  <author>Bhaskara Marthi</author>
  <maintainer email="arprice@gatech.edu">Andrew Price</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/rgbd_graph_segmentation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>image_geometry</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <cpp
        cflags="-I${prefix}/include"
        lflags="-L${prefix}/lib -lrgbd_graph_segmentation"/>
  </export>
</package>


